// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample streams > final screen of the fake build stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake build stream 2`] = `
" ✓ src/ui/Button2653.test.tsx (1 tests) 244ms
 ✓ test/cart.test2654.test.ts (36 tests) 61ms
 ✓ src/lib/cache2655.test.ts (16 tests) 117ms
 ✓ src/ui/Button2656.test.tsx (29 tests) 844ms
 ✓ src/cart2657.test.ts (22 tests) 571ms
 ✓ src/lib/cache2658.test.ts (11 tests) 722ms
 ✓ src/lib/cache2659.test.ts (37 tests) 675ms
 ✓ test/cart.test2660.test.ts (30 tests) 543ms
 ✓ packages/core/src/status2661.test.ts (33 tests) 516ms
 ✓ src/ui/Button2662.test.tsx (13 tests) 666ms
 ✓ test/cart.test2663.test.ts (2 tests) 308ms
 ✓ test/cart.test2664.test.ts (18 tests) 686ms
 ✓ src/ui/Button2665.test.tsx (11 tests) 327ms
 ✓ src/cart2666.test.ts (5 tests) 770ms
 ✓ test/cart.test2667.test.ts (26 tests) 597ms
 ✓ src/ui/Button2668.test.tsx (8 tests) 892ms
 ✓ src/ui/Button2669.test.tsx (18 tests) 401ms
 ✗ src/cart.ts > Agent returns payment diff module.
   AssertionError: expected 4 to be 18
 ✓ src/cart2671.test.ts (1 tests) 313ms
 ✓ src/lib/cache2672.test.ts (36 tests) 221ms
 ✓ src/cart2673.test.ts (30 tests) 707ms
 ✓ src/ui/Button2674.test.tsx (17 tests) 844ms
 ✓ src/lib/cache2675.test.ts (23 tests) 139ms
 ✓ test/cart.test2676.test.ts (34 tests) 295ms
 ✓ test/cart.test2677.test.ts (10 tests) 503ms
 ✓ test/cart.test2678.test.ts (6 tests) 753ms
 ✓ src/cart2679.test.ts (12 tests) 202ms
 ✓ src/ui/Button2680.test.tsx (32 tests) 178ms
 ✓ src/cart2681.test.ts (33 tests) 584ms
 ✓ test/cart.test2682.test.ts (28 tests) 429ms
 ✓ src/lib/cache2683.test.ts (38 tests) 558ms
 ✓ src/lib/cache2684.test.ts (10 tests) 846ms
 ✗ src/cart.ts > Frame suite agent patch cursor.
   AssertionError: expected 3 to be 14
 ✓ src/lib/cache2686.test.ts (35 tests) 344ms
 ✓ src/api/checkout2687.test.ts (13 tests) 507ms
 ✓ src/cart2688.test.ts (36 tests) 873ms
 ✓ test/cart.test2689.test.ts (24 tests) 110ms
"
`;

exports[`sample streams > final screen of the fake claude stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake claude stream 2`] = `
"⏺ Patch frame transcript session order function test the branch order worktree retry parser terminal.
⏺ Read(test/cart.test.ts)
  ⎿  Updated with 3 additions and 1 removal
⏺ Commit file commit payment session worktree commit function handler column order returns cart update render cart
  handler returns worktree module payment session frame handler handler file value.
⏺ Layout frame file layout value cart parser file config token handler height suite token terminal request.
⏺ Frame commit file returns retry test retry transcript status retry refactor token session buffer layout user token
  branch retry update worktree buffer parser branch.
⏺ Read(src/cart.ts)
  ⎿  Found 4 matches
⏺ Worktree terminal agent session file parser frame the patch file function height transcript error value diff user
  function the transcript render agent agent the frame update payment height value module session order function
  cache cart.
⏺ Width transcript stream config config branch config test config refactor function refactor cursor branch status
  retry value the worktree hook column value token update commit session order status update column height.
⏺ Edit(src/lib/cache.ts)
  ⎿  Updated with 3 additions and 1 removal
⏺ Retry error layout column width worktree cursor width request refactor test frame payment cache cart cart test
  agent worktree value the payment handler retry returns a returns branch diff terminal update height function.
⏺ Error patch refactor terminal returns cursor line function handler layout diff returns the module diff function
  cursor worktree stream function update order stream cursor branch suite.
⏺ Token layout diff retry handler refactor layout order frame token config height cache refactor module stream the
  user test error branch status refactor worktree a buffer branch session terminal terminal test user value agent
  parser session render error hook.
⏺ Commit status column hook frame width value checkout cart agent the config parser width.
⏺ The suite session checkout refactor diff the config value handler height cache module error value terminal a suite
  transcript request order diff hook a update cart branch parser parser the session cursor cursor handler function.
⏺ Column checkout request parser module line value request function worktree retry cursor status cursor status cache
  render commit column the commit payment cache a test.
⏺ Grep(src/ui/Button.tsx)
  ⎿  Updated with 3 additions and 1 removal
⏺ Grep(src/api/checkout.ts)
  ⎿  Read 120 lines
✳ Reading… (7s · ↑ 6.0k tokens · esc to interrupt)

╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                                  │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  ⏵⏵ accept edits on (shift+tab to cycle)
"
`;

exports[`sample streams > final screen of the fake codex stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake codex stream 2`] = `
"
Order value session commit terminal request config error function payment agent terminal commit handler layout
payment layout user.

• Edited src/api/checkout.ts (+7 -5)
 258 -    diff status branch.
 259 +layout payment height patch.
 260 +      a payment hook commit.
 261        retry commit width commit terminal.
 262 +    parser function error width.
 263        buffer cart suite patch refactor layout.
 264      stream returns token request line worktree.
 265    payment buffer column cursor branch suite payment terminal.
 266 -    request line frame status returns config.
 267    height terminal error.

File test frame column checkout retry transcript width diff checkout function checkout buffer height height token
request retry token commit a hook commit commit file line update line file hook cache refactor width test error order
commit patch.

Session config test order status terminal worktree handler session height line returns test user stream token layout
layout patch parser suite status.

Cache render commit status request width width cursor test suite value a width user cache render order the stream
patch config line layout error checkout returns.

Cache line diff width terminal test test commit function request payment status session user commit value width patch
token worktree render refactor agent diff file cursor update buffer agent width hook line cart retry diff worktree
error column error diff.

Patch column parser width branch transcript commit handler parser width hook suite stream diff terminal retry
refactor test commit transcript the cart handler diff cache.

Parser refactor width stream suite cart frame stream update hook session terminal error render patch the commit file.

Error a patch request frame commit module hook value buffer commit commit error config retry function user stream
token suite width render file token cart retry width diff refactor.

• Working (54s • esc to interrupt)
"
`;

exports[`sample streams > final screen of the fake opencode stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 0,
  },
}
`;

exports[`sample streams > final screen of the fake opencode stream 2`] = `
"






































"
`;

exports[`sample streams > final screen of the fake unicode stream 1`] = `
{
  "alternate": false,
  "cursor": {
    "visible": true,
    "x": 0,
    "y": 39,
  },
}
`;

exports[`sample streams > final screen of the fake unicode stream 2`] = `
"中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
中文输入法 日本語のテキスト 한국어 텍스트
中文输入法 日本語のテキスト 한국어 텍스트
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
中文输入法 日本語のテキスト 한국어 텍스트
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
flags 🇺🇸 🇯🇵 🇩🇪 combining: é ä ñ Å
中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
box ┌─┬─┐ │中│文│ └─┴─┘ arrows ← → ↑ ↓ ⏺ ⎿ ⏵
中文输入法 日本語のテキスト 한국어 텍스트
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
中文输入法 日本語のテキスト 한국어 텍스트
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
mixed: ｆｕｌｌｗｉｄｔｈ ＡＢＣ and half ｱｲｳ
中文输入法 日本語のテキスト 한국어 텍스트
emoji 😀 🚀 ✅ ❤️ 👍🏽 and ZWJ 👨‍👩‍👧 👩‍💻 🏳️‍🌈
中文输入法 日本語のテキスト 한국어 텍스트
"
`;
